# multi-character-chat

./: .gitignore  README.md  char_chat.py  pyproject.toml
character_chat/: char_chat.py  char_chat_wartales_version.py  test_chat.py
