[tool.poetry]
name = "character-chat"
version = "0.1.0"
description = "a custom ai character chat using autogen"
authors = ["Will Huebler"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
requests = "^2.31.0"
panel = "^1.3.8"
python-dotenv = "^1.0.1"
pyautogen = "^0.2.12"
autogen = "^1.0.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
